# Gemini-Trading-Bot

./: DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  kalshi_crypto_data.json  kalshi_data.py  kalshi_events.json
prediction_arb/: .env.template  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FLOW.md  Dockerfile  QUICKSTART.md  QUICK_REFERENCE.md  README.md  __init__.py  alembic.ini  pyproject.toml
prediction_arb/bot/: __init__.py  alerts.py  backtest.py  config.py  engine.py  executor.py  logging_setup.py  main.py  matcher.py  metrics.py  models.py  monitor.py  orderbook_cache.py  price_poller.py  risk.py  scanner.py  state.py
prediction_arb/bot/api/: __init__.py  routes.py  server.py  sse.py
prediction_arb/bot/clients/: __init__.py  base.py  gemini.py  kalshi.py  polymarket.py
prediction_arb/dashboard/: Dockerfile  package.json
prediction_arb/dashboard/app/: layout.tsx  page.tsx
prediction_arb/dashboard/lib/: api.ts  sse.ts
prediction_arb/infra/: bootstrap.sh  docker-compose.yml
prediction_arb/infra/iam/: policy.json  security-group.md
prediction_arb/infra/nginx/: nginx.conf
prediction_arb/infra/prometheus/: prometheus.yml
prediction_arb/migrations/: __init__.py  env.py
prediction_arb/migrations/versions/: 0001_initial.py  0002_match_cache.py
prediction_arb/scripts/: backtest.sh
prediction_arb/tests/: __init__.py
prediction_arb/tests/integration/: __init__.py  test_scan_cycle.py  test_statestore.py
prediction_arb/tests/property/: __init__.py  test_alerts_pbt.py  test_api_pbt.py  test_backtest_pbt.py  test_config_pbt.py  test_gemini_pbt.py  test_logging_pbt.py  (+6 more)
(+102 files in other folders)
