[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "prediction-arb"
version = "0.1.0"
description = "Production prediction market arbitrage bot"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
    "sse-starlette>=2.1.0",
    "boto3>=1.34.0",
    "hvac>=2.1.0",
    "openai>=1.30.0",
    "anthropic>=0.28.0",
]

[project.optional-dependencies]
test = [
    "hypothesis>=6.100.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
prediction-arb = "prediction_arb.bot.main:main"

[tool.setuptools.packages.find]
where = [".."]
include = ["prediction_arb*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
